# LipschitzPruning

./: .gitmodules  CMakeLists.txt  LICENCE  README.md
.github/workflows/: cmake-multi-platform.yml  github-actions-demo.yml
include/: constants.h  context.h  debug_plane.h  scene.h  utils.h
scenes/: molecule.json  test.json  trees.json
scripts/: make_package.py  setup_vulkan_sdk.sh
shaders/: common.glsl  common_culling.glsl  culling.comp.glsl  dense_eval.comp.glsl  eval.glsl  extensions.glsl  plane.frag.glsl  plane.vert.glsl  simple.frag.glsl  simple.vert.glsl
src/: context.cpp  debug_plane.cpp  main.cpp  scene.cpp  utils.cpp
